# rhyolite

./: .gitattributes  .gitignore  .prettierrc  .prettierrc.toml  CODEOWNERS.txt  Cargo.toml  Packager.toml  README.md  build.rs  package.json  rustfmt.toml  tailwind.config.js  tree.txt  vite.config.js
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: main.yml  nightly_release.yml  rust_ci.yml  stable_release.yml
app_themes/: catppuccinLatte.toml  catppuccinMacchiato.toml  catppuccinMocha.toml  crimsonNocturne.toml  default.toml  greenScreen.toml  gruvboxMaterialDark(Hard).toml  gruvboxMaterialLight(Hard).toml  rosePineDawn.toml  rosePineMain.toml  rosePineMoon.toml  tokyoNightDark.toml
packaging/: README.md  build.md  package_app.sh
packaging/linux/: Rhyolite.desktop  Rhyolite.metainfo.xml  install.sh
packaging/linux/appimage/: build.sh
packaging/linux/flatpak/: build.sh  io.github.redddfoxxyy.pomolin.metainfo.xml  io.github.redddfoxxyy.rhyolite.desktop  io.github.redddfoxxyy.rhyolite.yml
src/: .prettierrc  app.css  app.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Crates/markdown_engine/: Cargo.toml
src-tauri/Crates/markdown_engine/src/: lib.rs
src-tauri/Crates/markdown_engine/src/handlers/: blocks.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  helpers.rs  lib.rs  main.rs  utils.rs
src-tauri/src/default_themes/: CrimsonNocturne.json  CrimsonNocturne.toml  catppuccinLatte.json  catppuccinLatte.toml  catppuccinMacchiato.json  catppuccinMocha.json  coffee.json  coffee.toml  default.json  greenscreen.json  rosePineDawn.json  rosePineMain.json  rosePineMain.toml  rosePineMoon.json  rosePineMoon.toml
src-tauri/src/editor/: io.rs  markdown_handler.rs  mod.rs  tabs.rs  themes.rs
src-tauri/src/editor/io/: functions.rs  mod.rs
src-tauri/src/editor/io/commands/: delete_document.rs  get_document_content.rs  get_recent_files_metadata.rs  init_frontend_state.rs  load_last_open_tabs.rs  mod.rs  save_document.rs
src-tauri/src/editor/settings/: themes.rs
src-tauri/src/editor/settings/themes/: mod.rs  theme_utils.rs  utils.rs
src-tauri/src/editor/settings/themes/commands/: get_loaded_themes.rs  mod.rs  reset_theme.rs  set_theme.rs
src-tauri/src/editor/tabs/: functions.rs  mod.rs
src-tauri/src/editor/tabs/commands/: close_tab.rs  cycle_tabs.rs  load_tab.rs  mod.rs  new_tab.rs  switch_tab.rs  update_tab_title.rs
src/app_state/: data_type.rs  mod.rs  ui_stores.rs
src/components/: command-palette.svelte  document.svelte  home-hotkeys.svelte  recentfilesmenu.svelte  settingsmenu.svelte  sidebar.svelte  titlebar.svelte  workspace.svelte
src/components/content-editor/: content-editor.svelte
src/data/: docspace.rs  fn_utils.rs  io.rs  io_utils.rs  mod.rs  stores.rs  tabs.rs  themes.rs  types.rs  ui.rs
src/data/stores/: doc_store.rs  docspace.rs  mod.rs  tabs.rs  tabs_store.rs  ui_store.rs
src/lib/: helpers.ts  hotkeys.svelte.ts  state.ts
src/lib/assets/: close.svg.svelte  recent_files.svg.svelte  restore.svg.svelte
src/lib/components/: command-palette.svelte  document.svelte  home-hotkeys.svelte  recentfilesmenu.svelte  settingsmenu.svelte  sidebar.svelte  titlebar.svelte  workSpace.svelte  workspace.svelte
src/lib/components/content-editor/: cm-theme.svelte.ts  cmPlugins.svelte.ts  codemirror-editor.svelte  content-editor.svelte  markedTheme.css
src/lib/components/content-editor/components/: cm-theme.svelte.ts  custom-extentions.ts  toolbar-button.svelte
src/lib/services/: api.interface.ts  api.service.ts  document.service.ts  tab.service.ts  tauri-invoke.service.ts
src/lib/static/: command_palette.svg.svelte  maximise.svg.svelte  minimise.svg.svelte  settings.svg.svelte
src/lib/stores/: commandPalette.svelte.ts  contentEditor.svelte.ts  recentFiles.svelte.ts  settingsMenu.svelte.ts  tabs.store.ts  theme.store.ts  themes.svelte.ts
src/lib/tauri-cmd/: document.ts  tab.ts
src/lib/themes/: CrimsonNocturne.ts  catppuccinLatte.ts  catppuccinMacchiato.ts  catppuccinMocha.ts  coffee.ts  default.ts  greenscreen.ts  new_theme.ts  rosePineDawn.ts  rosePineMain.ts  rosePineMoon.ts
src/lib/types/: document.ts  tab.ts  theme.d.ts
src/routes/: +layout.svelte  +page.svelte
src/services/: api.interface.ts  document.service.ts  tab.service.ts  tauri-invoke.service.ts
src/stores/: tabs.svelte.ts  theme.store.ts
src/types/: tab.ts
src/utils/: themes.rs
src/view/: app_view.rs  bottom_bar.rs  composite.rs  docview.rs  dropdown.rs  index.rs  mod.rs  notification_toast.rs  palette.rs  settings_menu.rs  sidebar.rs  top_bar.rs  workspace.rs
src/view/components/: buttons.rs
src/view/widgets/: buttons.rs
