[package]
name = "Rhyolite"
version = "0.2.0"
description = "A simple markdown editor written in Rust, inspired by Obsidian."
authors = ["Suyog Tandel(RedddFoxxyy)<suyogtandel@proton.me>"]
license = "GPL-3.0"
edition = "2024"

[dependencies]
freya = { git = "https://github.com/RedddFoxxyy/freya.git", branch = "feat/dynamic-scroll-view", features = [] }
# freya = { path = "../freya/crates/freya", features = [] }
dioxus-clipboard = "0.2.0"
winit = "0.30.12"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0.0"
#sanitize-filename = "0.6.0"
log = { version = "0.4.27" }
log4rs = "1.3.0"
tokio = { version = "1.47.1", features = ["fs", "sync", "io-util", "io-std"] }
slab = "0.4.11"
#syntect = "5.2.0"

[build-dependencies]
dirs = "6.0.0"

[profile.dev]
incremental = true
lto = false
opt-level = 1
codegen-units = 256

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations, however, is not stable.
opt-level = 3     # Prioritizes speed. Use `z` if you prefer a small binary size.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[package.metadata.generate-rpm]
name = "Rhyolite"
assets = [
	{ source = "target/release/Rhyolite", dest = "/usr/bin/Rhyolite", mode = "0755" },
	{ source = "LICENSE.txt", dest = "/usr/share/doc/Rhyolite/LICENSE", doc = true, mode = "0644" },
	{ source = "packaging/linux/Rhyolite.desktop", dest = "/usr/share/applications/Rhyolite.desktop", mode = "0644" },
	{ source = "src/static/icon.png", dest = "/usr/share/icons/hicolor/512x512/apps/Rhyolite.png", mode = "0644" },
	{ source = "packaging/linux/Rhyolite.metainfo.xml", dest = "/usr/share/metainfo/Rhyolite.metainfo.xml", mode = "0644" },
]
