[package]
name = "Rhyolite"
version = "0.1.5"
description = "A simple text editor written in Tauri, inspired by Obsidian."
authors = ["Suyog Tandel(RedddFoxxyy)"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rhyolite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
dirs = "6.0.0"
sanitize-filename = "0.6.0"
pulldown-cmark = "0.13.0"
uuid = { version = "1.13.1", features = ["v4"] }
indexmap = "2.7.1"
mdka = "1.2.14"
regex = "1.11.1"
markdown_engine = { path = "./Crates/markdown_engine" }
tauri-plugin-fs = "2.2.0"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes speed. Use `z` if you prefer small binary size.
# panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
